Authentifcation_Verif_Email/deploybase.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: fullstack
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: storage
              mountPath: /var/lib/mysql
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: mysql-pvc
