Authentifcation_Verif_Email/backdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backspring
  namespace: fullstack
spec:
  replicas: 2  # Nombre de pods backend
  selector:
    matchLabels:
      app: backspring
  template:
    metadata:
      labels:
        app: backspring
    spec:
      containers:
        - name: backspring
          image: souhirks/backend:v1  # Remplace par ton image Docker
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backspring
  namespace: fullstack
spec:
  type: NodePort
  selector:
    app: backspring
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
