Authentifcation_Verif_Email/ingresscontroller.yml
apiVersion: v1
kind: Service
metadata:
  name: ingreservice
  namespace: fullstack
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - name: http  # Nom du port HTTP
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https  # Nom du port HTTPS
      protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
  externalIPs:
    - 172.31.1.34  # IP privée de la machine master
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.96.46.167  # IP statique pour le service
