Authentifcation_Verif_Email/mysqlservice.yml
apiVersion: v1
kind: Service
metadata:
  name: mysqlservice
  namespace: fullstack
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None
