Authentifcation_Verif_Email/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressbackfront
  namespace: fullstack
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: server.devops.com
    http:
      paths:
      - path: /customers
        pathType: Prefix
        backend:
          service:
            name: backspring
            port:
              number: 8080
  - host: client.devops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 80
